--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,22 @@
 .read-the-docs {
   color: #888;
 }
-.answers{
+.answers {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  width: 650px;
+}
+.answers p {
+  margin-left: 25px;
+  text-align: start;
+}
+.answerResult {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.quizResult {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
